--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
+    "prepublish": "npm run build",
     "example:create-db": "ts-node example/create-db.ts",
     "example:generate": "ts-node ./bin/schemats postgres postgres://postgres:password@localhost/schemats -s pet_store -o example/db-types.ts -f ./db-custom-types -c -e",
     "example": "yarn run example:create-db && yarn run example:generate"
